fixed gallery images aspect ration on mobile

--- a/frontend/src/components/image.css
+++ b/frontend/src/components/image.css
@@ -1,20 +1,20 @@
 .image {
   cursor: zoom-in;
-  height: 100%;
+  object-fit: cover;
 }
 
 .image-container {
   position: relative;
-  height: 300px;
+  height: 100%;
   overflow: hidden;
   text-align: center;
 }
 
-.image-container.vertical {
+.image-container.vertical .image {
   aspect-ratio: 3/4;
 }
 
-.image-container.horizontal {
+.image-container.horizontal .image {
   aspect-ratio: 4/3;
 }
 
@@ -55,12 +55,5 @@
   }
   100% {
     background-color: lightgray;
-  }
-}
-
-@media screen and (max-width: 550px) {
-  .image-container.vertical,
-  .image-container.horizontal {
-    all: unset;
   }
 }
